2008-03-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Add back pids property for backwards compatibility, even
	though it is just going to be ignored.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	Rename Signal Stats to Signal Statistics.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* conf/dvb-t-two-channels-ogg.xml:
	* conf/dvb-t-two-channels.xml:
	Example flow files to have 2 channels streamed from same
	adapter.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvbbin.py:
	Remove old unused experimental code.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Split of DVB Producer into 3 components:
	dvb-ts-producer (just captures and outputs a ts)
	mpeg-ts-splitter (takes a ts and outputs a ts relevant for a
	                  certain program)
	mpeg-ts-decoder (demuxes and decodes a ts into raw video and audio)
	Orginal dvb-producer still exists. Components refactored so common
	code is shared.

2008-02-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/dvb/dvb.xml:
	  Bundle more code properly.

2007-10-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Move to using dvbbasebin instead of dvbsrc.
	No longer required to specify pids property, just program
	number is required.
	This gives hardware CAM support for free,

2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix device paramter construction if old dvbsrc used with
	no device specified and adapter specified instead.

2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py: